# Cybernetics

./: .env.example  .gitignore  AGENTS.md  AGENTS.override.md  AIWG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  WARP.md  cloudbuild.yaml  config.yaml  go.mod  hackathon.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_slack_adapter.py  tsconfig.json
broker/: __init__.py
config/: vitest.config.js  vitest.conformance.config.js  vitest.uat-daemon.config.js  vitest.uat-live.config.js  vitest.uat.config.js
docs/: CLI_USAGE.md  _manifest.json  agent-intelligence.md  architecture-overview.md  behaviors-guide.md  cli-reference.md  cli-ui-modernization.md  concierge-guide.md  config.json  context-management-patterns.md  daemon-guide.md  deploy-generators.md  discovery-and-kernel-skills.md  disk-output-patterns.md  docs-sources.json  gap-analysis-guide.md  hook-file-architecture.md  hook-patterns.md  how-it-works.md  hybrid-addressing.md  intake-guide.md  mcp-auto-mode-guide.md  mention-utilities.md  messaging-guide.md  model-evaluation.md  openclaw-guide.md  plugin-marketplace-guide.md  privacy.md  quality-metrics.md  quickstart-mmk.md  quickstart-sdlc.md  quickstart.md  ralph-guide.md  regenerate-guide.md  research-pdf-optimization.md  serve-guide.md  session-pr-linking.md  simple-language-translations.md  skills-budget-guide.md  skills-commands-unification.md  (+7 more)
examples/: extension-validation-example.ts
frontend/: index.html  package-lock.json  package.json
google-cloud/: agent-builder-config.json
man/: aiwg.1
(+3325 files in other folders)
