[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybernetics"
version = "2026.5.2"
description = "Composable MCP Broker for Google Cloud Agents"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"

[project.scripts]
cybernetics-mcp = "cybernetics.mcp.server:main"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "structlog>=25.1.0",
    "tenacity>=9.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "playwright>=1.50.0",
    "elasticsearch[async]>=8.17.0",
    "google-generativeai>=0.8.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "starlette>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "moto>=5.0.0",
    "aioresponses>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cybernetics*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --tb=short"
